# undikshaBot

./: .gitignore  bot.py  data_lulus.xlsx  pyproject.toml  verified_users.csv  ~$data_lulus.xlsx
