[tool.poetry]
name = "undikshabot"
version = "0.1.0"
description = ""
authors = ["Resika Arthana <resika.arthana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^22.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
